# ChangeLog for net-analyzer/symon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Mar 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  files/symon-symon.conf.patch, files/symon-symux.conf.patch:
  Prettify the configuration files, add resources for MP machines, while there
  insert missing comments to document the patch purpose

  18 Mar 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  files/symon-syweb-class_lexer.inc.patch,
  files/symon-syweb-setup.inc.patch,
  files/symon-syweb-total_firewall.layout.patch:
  Improve patch comment about renaming the directories, while there prettify them

  18 Mar 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r2.ebuild:
  Tell the user to test the configuration files only after creating the RRDs,
  since symux reads the configuration file with file access checks (prevents
  symux -t from giving warnings)

  18 Mar 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> files/symon-init.d,
  files/symux-init.d:
  Beautify the code by converting spaces to tabs

  23 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r2.ebuild:
  Remove slash from docinto, simplify elog messages

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> symon-2.78-r2.ebuild:
  Fix php check in pkg_setup, add missing pkg_prerm for webapp.eclass

  18 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r2.ebuild:
  Introduce a new variable (CDEPEND) that will hold common dependencies for
  (R)DEPEND

  18 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -symon-2.78-r1.ebuild, +symon-2.78-r2.ebuild:
  New USE flag 'client' added, remove old

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de symon-2.78-r1.ebuild:
  Shorten description

  03 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> files/symon-init.d,
  files/symux-init.d:
  net is really necessary for the correct functioning of the service

  03 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild: