@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1673 RMD160 63e130338b7d48dc2debc4c2
 AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.78.tar.gz 102400 RMD160 40ca61ce68778de54d5a1b541d6c640dd7fb479c SHA1 bbe7f2b58e3ed0e42f3b1da97ea4051d2c1cee34 SHA256 cda07388156e66a665c6d53dca4fdce3e210ee6a28c44e64d240715a572b39ac
 DIST syweb-0.57.tar.gz 40960 RMD160 a59c24402344c3d2ae44c4ff586c469289a5e6e8 SHA1 05762c6b472e161d7bae56b603e4eb8595323738 SHA256 d1a5bbec892488f5bbc1ef5b52fd512097421f4e6be8742ad18838d11f42d502
-EBUILD symon-2.78-r2.ebuild 3192 RMD160 717a35df898b054b56011ad187fb3152bf307549 SHA1 34407ea101b3cef94459c85e5448515d855523b5 SHA256 8bafb6f057626d6373ab7af7ce5b79eba61a1155cc852ea14b96f6df565a455e
-MISC ChangeLog 4310 RMD160 c705e7a47f9f1d16e902cbe2080d9d54b192c589 SHA1 b48c32b2f7d97f4886ba251ca249346ed1d009e5 SHA256 b7e96a391396f02560c5b4fecc8e05a61dd965714c9d0890e95887e40bef0f20
+EBUILD symon-2.78-r2.ebuild 3247 RMD160 94fb85fcf5308a14e32520d4d72fd45c7cea358f SHA1 d849347e0cc80963ca1c50a2b708a2c51dfb53dd SHA256 1d334b25f0d7a5f7377d7ead5d26596029972ee0f285131c597ace169c9a5164
+MISC ChangeLog 4431 RMD160 1b1c1d51d70f26a17e7985ffcd447bbe7e9d2195 SHA1 a4b14eee2b8f60d654cb12611719c6d30f889cf2 SHA256 5d741e3f3b5a828c0938148b5778daa54cf1304fefc48df7394511f15aa4daf0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
