@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Mar 2008; Jakub Moc <jakub@gentoo.org> symon-2.78-r2.ebuild:
+  Improve webapp eclass handling and fix dependencies
+
   18 Mar 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
   files/symon-symon.conf.patch, files/symon-symux.conf.patch:
   Prettify the configuration files, add resources for MP machines, while there
